; ModuleID = '/home/carl/AnghaBench/git/builtin/extr_submodule--helper.c_status_submodule_cb.c'
source_filename = "/home/carl/AnghaBench/git/builtin/extr_submodule--helper.c_status_submodule_cb.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.cache_entry = type { i32, i32, i32 }
%struct.status_cb = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.cache_entry*, i8*)* @status_submodule_cb to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @status_submodule_cb(%struct.cache_entry* %0, i8* %1) #0 {
  %3 = alloca %struct.cache_entry*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca %struct.status_cb*, align 8
  store %struct.cache_entry* %0, %struct.cache_entry** %3, align 8
  store i8* %1, i8** %4, align 8
  %6 = load i8*, i8** %4, align 8
  %7 = bitcast i8* %6 to %struct.status_cb*
  store %struct.status_cb* %7, %struct.status_cb** %5, align 8
  %8 = load %struct.cache_entry*, %struct.cache_entry** %3, align 8
  %9 = getelementptr inbounds %struct.cache_entry, %struct.cache_entry* %8, i32 0, i32 2
  %10 = load i32, i32* %9, align 4
  %11 = load %struct.cache_entry*, %struct.cache_entry** %3, align 8
  %12 = getelementptr inbounds %struct.cache_entry, %struct.cache_entry* %11, i32 0, i32 1
  %13 = load %struct.cache_entry*, %struct.cache_entry** %3, align 8
  %14 = getelementptr inbounds %struct.cache_entry, %struct.cache_entry* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 4
  %16 = load %struct.status_cb*, %struct.status_cb** %5, align 8
  %17 = getelementptr inbounds %struct.status_cb, %struct.status_cb* %16, i32 0, i32 1
  %18 = load i32, i32* %17, align 4
  %19 = load %struct.status_cb*, %struct.status_cb** %5, align 8
  %20 = getelementptr inbounds %struct.status_cb, %struct.status_cb* %19, i32 0, i32 0
  %21 = load i32, i32* %20, align 4
  %22 = call i32 @status_submodule(i32 %10, i32* %12, i32 %15, i32 %18, i32 %21)
  ret void
}

declare dso_local i32 @status_submodule(i32, i32*, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
